Projet GL/test/src/test/deca/context/valid/increment1/bool-assign.deca
// Test boolean simple assignation

// Historique : cree le 11/01/2023

{
    boolean a;

    a = true;
    a = false;
}