Projet GL/test/src/test/deca/context/invalid/increment4/no-super-name.deca
// Test : super class must be declared before class

// Historique : cree le 17/01/2023

// Must be refused
class A extends B {}

class B{}